--- a/academic/ifl2007/supero.tex
+++ b/academic/ifl2007/supero.tex
@@ -25,12 +25,12 @@
 \maketitle              % typeset the title of the contribution
 
 \begin{abstract}
-Haskell is a functional language, with features like higher order functions and lazy evaluation, which allow succinct representations of programs. These high-level features can result in poor runtime speed, if care is not taken. This paper presents a whole program approach to optimisation, which produces speed improvements of between 10\% and 60\% relative to the GHC, on a small number of benchmarks.
+Haskell is a functional language, with features such as higher order functions and lazy evaluation, which allow succinct representations of programs. These high-level features can result in poor runtime speed, if care is not taken. This paper presents a whole program approach to optimisation, which produces speed improvements of between 10\% and 60\% relative to the GHC compiler, on a small number of benchmarks.
 \end{abstract}
 
 \section{Introduction}
 
-Haskell \cite{haskell} can be used in a highly declarative manner, to directly express specifications which are themselves executable. Take for example the task of counting the number of words in a file read from the standard input. In Haskell, one could write:
+Haskell \cite{haskell} can be used in a highly declarative manner, to express specifications which are themselves executable. Take for example the task of counting the number of words in a file read from the standard input. In Haskell, one could write:
 
 \begin{code}
 main = print . length . words =<< getContents
@@ -38,7 +38,7 @@ main = print . length . words =<< getContents
 
 The |getContents| function reads the input as a list of characters, |words| splits this list into a list of words, |length| counts the number of words, and finally |print| writes the value to the screen. The use of |(=<<)| is merely to sequence the actions, and can be ignored for those unfamiliar with Haskell and monadic IO.
 
-An equivalent C program is given in Figure \ref{fig:c_words}. Compared to the C program, the Haskell version is more concise, more specification orientated and easier to convince others of its correctness. Unfortunately, it is also three times slower than the C version.
+An equivalent C program is given in Figure \ref{fig:c_words}. Compared to the C program, the Haskell version is more concise, more specification orientated and easier to convince others of its correctness. Unfortunately, it is also three times slower than the C version. This slowdown is caused by several factors:
 
 \begin{fig}
 \bigskip
@@ -62,15 +62,13 @@ int main()
 \label{fig:c_words}
 \end{fig}
 
-There are several reasons that the Haskell version does not perform at the same speed as the C version:
-
 \begin{description}
-\item[Intermediate Lists] The Haskell program produces and consumes many intermediate lists as it computes the result. The |getContents| function produces a list of characters, |words| consumes this list and produces a list of a list of characters, |length| then consumes the outermost list. The C version has no allocation.
-\item[Higher Order Arguments] The |words| function is defined using the function |span|, which takes a predicate and splits the input list when the predicate becomes true. The predicate is passed as a higher order function, which is constant in all applications of |span|.
-\item[Laziness] The Haskell program proceeds in a lazy manner, demanding one character from |getContents|, then processing it with each of the functions in the pipeline. At each stage, a lazy thunk for the remainder of each function is created.
+\item[Intermediate Lists] The Haskell program produces and consumes many intermediate lists as it computes the result. The |getContents| function produces a list of characters, |words| consumes this list and produces a list of lists of characters, |length| then consumes the outermost list. The C version has no memory allocation.
+\item[Higher Order Arguments] The |words| function is defined using the function |dropWhile|, which takes a predicate and discards elements from the input list until the predicate becomes true. The predicate is passed as a higher order function, which is constant in all applications of |dropWhile|.
+\item[Laziness] The Haskell program proceeds in a lazy manner, first demanding one character from |getContents|, then processing it with each of the functions in the pipeline. At each stage, a lazy thunk for the remainder of each function is created.
 \end{description}
 
-By using the optimiser developed in this paper we can eliminate all these overheads, resulting in a program that performs \textit{faster} than the equivalent C version. The central idea of the optimiser is that we attempt to evaluate as much of the program at compile time as possible, leaving a residual program consisting of only actions dependent on the input data.
+By using the optimiser developed in this paper we can eliminate all these overheads, resulting in a program that performs \textit{faster} than the C version presented. The central idea of the optimiser is that we attempt to evaluate as much of the program at compile time as possible, leaving a residual program consisting of only actions dependent on the input data.
 
 Our goal is to make high-level Haskell programs perform as fast as low-level Haskell programs, eliminating the need to optimise Haskell programs in the kind of detail currently required for some high performance programs. We require no annotations on any part of the program, including the library functions.
 
@@ -94,16 +92,16 @@ expr  =  v                                          {-" \text{  variable} "-}
 pat   =  c vs_
 \end{code}
 
-Where |v| ranges over variables, |C| ranges over constructors, |f| ranges over functions, |x|, |y| and |z| range over expressions and |p| ranges over patterns.
+Where |v| ranges over variables, |c| ranges over constructors, |f| ranges over functions, |x|, |y| and |z| range over expressions and |p| ranges over patterns.
 \bigskip
 \figend
 \caption{Core syntax}
 \label{fig:core}
 \end{fig}
 
-All our optimisations operate on a standard Core language, documented in \cite{me:yhc_core}. The expression data type is given in Figure \ref{fig:core}. A program is a mapping of function names to expressions. Our Core language is higher order and lazy, but lacks much of the syntactic sugar found in Haskell. Pattern matching occurs only in case expressions, and all case expressions are exhaustive. All names are fully qualified. Haskell's type classes have been removed by the dictionary transformation \cite{wadler:type_classes}.
+All our optimisations operate on a standard Core language, documented in \cite{me:yhc_core}. The expression type is given in Figure \ref{fig:core}. A program is a mapping of function names to expressions. Our Core language is higher order and lazy, but lacks much of the syntactic sugar found in Haskell. Pattern matching occurs only in case expressions, and all case expressions are exhaustive. All names are fully qualified. Haskell's type classes have been removed by the dictionary transformation \cite{wadler:type_classes}.
 
-The Yhc compiler, a fork of nhc \cite{nhc}, can output Core files using a single flag. Yhc can also link in all definitions from all required libraries, and can produce a single Core file representing the entire program.
+The Yhc compiler, a fork of nhc \cite{nhc}, can output Core files using a single flag. Yhc can also link in all definitions from all required libraries, producing a single Core file representing the entire program.
 
 The primary difference between our Core language and that of the GHC compiler \cite{ghc_core} is that ours is untyped. The Core is generated from well-typed Haskell, and is guaranteed not to fail with a type error. All the transformations we implement could be implemented equally well in a typed Core language. We prefer to work in an untyped Core language for simplicity of implementation.
 
@@ -112,16 +110,16 @@ In order to avoid accidental variable name clashes while performing transformati
 \section{Optimisation}
 \label{sec:optimisation}
 
-Our optimisation procedure takes a Core program as input, and produces a new Core program, that has the same effect as the original -- hopefully with improved performance. We do not make small changes to the original program, but instead evaluate some of the program at compile time, leaving a residual program to be run.
+Our optimisation procedure takes a Core program as input, and produces a new Core program. Both programs must have the same effect, but hopefully the new program will perform better. We do not make small changes to the original program, but instead evaluate some of the program at compile time, leaving a residual program to be run.
 
-Each function in the output program is associated with an expression in the input program. The expression in the output program is an optimised version of the expression in the input program. Our optimisation proceeds by starting at the |main| function, and optimising the expression associated with |main|. Once the expression has been optimised, the outermost element in the expression becomes part of the residual program. All the inner expressions are assigned names, which become functions in the residual program. Each of these new functions are then optimised as before.
+Each function in the output program is associated with an expression in the input program. The expression in the output program is an optimised version of the associated expression in the input program. Our optimisation proceeds by starting at the |main| function, and optimising the expression associated with |main|. Once the expression has been optimised, the outermost element in the expression becomes part of the residual program. All the inner expressions are assigned names, which become functions in the residual program. Each of these new functions are then optimised as before.
 
 \begin{fig}
 \begin{code}
 _O\<case x of alts_  \> =  case _O\<x\> \? of alts_
 _O\<let v = x in y   \> =  let v = _O\<x\> \? in _O\<y\>
 _O\<x y              \> =  _O\<x\> \? y
-_O\<f                \> =  _O\<unfold f\>
+_O\<f                \> =  unfold f
                            where f {-" \hbox{ is a non-primitive, non-CAF function} "-}
 _O\<x                \> =  x
 \end{code}
@@ -146,11 +144,11 @@ case v of {... ; c vs_ -> x ; ...}
 case (let v = x in y) of alts_
     => let v = x in case y of alts_
 
-(let v = x in y) xs_
-    => let v = x in y xs_
+(let v = x in y) z
+    => let v = x in y z
 
-(case x of {p_1 -> y_1 ; ... ; p_n -> y_n}) xs_
-    => case x of {p_1 -> y_1 xs_ ; ... ; p_n -> y_n xs_}
+(case x of {p_1 -> y_1 ; ... ; p_n -> y_n}) z
+    => case x of {p_1 -> y_1 z ; ... ; p_n -> y_n z}
 
 (\v -> x) y
     => let v = y in x
@@ -177,7 +175,7 @@ let v = c x_1 ... x_n in y
 \label{fig:simplify}
 \end{fig}
 
-The optimisation of an expression is performed using the |_O| function in Figure \ref{fig:optimise}, and the simplification rules in Figure \ref{fig:simplify}. We define |_OO| to be the fixed point of applying both |_O| and the simplification rules. The |_O| function proceeds much like evaluation at run time, but stops if the next expression to reduce is a free variable, a constructor, a primitive, or a CAF (constant applicative form -- see \S\ref{sec:caf} for more details). The one difference is that in a |let| expression the bound variable and the inner expression are \textit{both} optimised -- see \S\ref{sec:let}.
+The optimisation of an expression is performed using the |_O| function in Figure \ref{fig:optimise}, and the simplification rules in Figure \ref{fig:simplify}. We define |_OO| to be the fixed point of applying both |_O| and the simplification rules. The |_O| function proceeds much like evaluation, but stops if the next expression to reduce is a free variable, a constructor, a primitive, or a CAF (constant applicative form -- see \S\ref{sec:caf} for more details). The one difference is that in a |let| expression the bound expression and the inner expression are \textit{both} optimised -- see \S\ref{sec:let} for the reasons.
 
 Let us take a simple example:
 
@@ -209,9 +207,9 @@ main = \xs -> case  xs of
                     y:ys  -> (y+1) : main ys
 \end{code}
 
-The residual program is now optimised -- there is no runtime passing of the |inc| function, only direct a arithmetic operation.
+The residual program is now optimised -- there is no runtime passing of the |inc| function, only a direct arithmetic operation.
 
-Next we show another example, which has an instance of list deforestation \cite{wadler:deforestation}. Taking the program:
+Next we show another example, which makes use of list deforestation \cite{wadler:deforestation}. Taking the program:
 
 \begin{code}
 main xs = map (+1) (map (*2) xs)
@@ -225,8 +223,8 @@ This is transformed (after trivial inlining) into:
 
 \begin{code}
 main xs = case  xs of
-               []    -> []
-               y:ys  -> (y*2)+1 : main ys
+                []    -> []
+                y:ys  -> (y*2)+1 : main ys
 \end{code}
 
 Here the intermediate list has been removed, and the higher order functions have been specialised.
@@ -261,13 +259,14 @@ reverseAcc = \xs -> \ys -> case  xs of
 
 This function is the standard |reverse| function, with an accumulator. The problem is that successive iterations of the optimisation produce progressively larger subexpressions. Initially a function will be created for |reverseAcc _ _|, then for |reverseAcc _ (_:_)|, then |reverseAcc _ (_:_:_)|. If left unchecked there would be an infinite number of functions created in the residual program.
 
-The solution is to bound the size of the input expression associated with each function. The size of the expression being optimised can be reduced by lifting some aspect of the expression into a let binding, then placing this let binding in the residual program. By bounding the size of the expression, we bound the number of functions in the residual program.
+The solution is to bound the size of the input expression associated with each function in the residual program. The size of the expression being optimised can be reduced by lifting subexpressions into a let binding, then placing this let binding in the residual program. By bounding the size of the expression, we bound the number of functions in the residual program.
 
-If the bound is too high, optimisation will take programs will take too long, the residual program will be excessively large and some functions will have too many arguments. If the bound is too low then we will have limited optimisation. We will come back to the issue of the size of this bound in \S\ref{sec:results_bound}.
+If the bound is too high, optimisation will take programs will take too long and the residual program will be excessively large. If the bound is too low then we will have limited optimisation. We will come back to the issue of the size of this bound in \S\ref{sec:results_bound}.
 
 \subsubsection{Direct Repetition}
+\label{sec:direct}
 
-While the two changes presented above do guarantee termination, it is often useful to detect an expression which appears to be repeating, and preemptively bound it. Consider the |reverseAccumulator| example -- the recursive pattern is an instance of \textit{direct repetition}. An expression |x| is directly repeating if |x ~= alpha (alpha beta)| where |beta| is an expression, |alpha| is a non-identity function from an expression to an expression and |~=| is equality where all variables are considered equal.
+While we believe the two changes presented above do guarantee termination, it is often useful to detect an expression which appears to be repeating, and preemptively bound it. Consider the |reverseAcc| example -- the recursive pattern is an instance of \textit{direct repetition}. An expression |x| is directly repeating if |x ~= alpha (alpha beta)| where |beta| is an expression, |alpha| is a non-identity function from an expression to an expression and |~=| is equality where all variables are considered equal.
 
 Some examples of expressions which have direct repetition:
 
@@ -305,7 +304,7 @@ let f = \x -> x + 1
 in f y : map f ys
 \end{code}
 
-After this optimisation, it is now clear that |f| is a lambda, so by inlining it there will be no additional computation.
+It is now clear that |f| is a lambda, so by inlining it there will be no loss of sharing.
 
 \subsection{CAF's}
 \label{sec:caf}
@@ -323,13 +322,13 @@ In this program |caf| would only be computed once. If a CAF function is inlined 
 \section{Benchmarks Versus C}
 \label{sec:c_results}
 
-The most comprehensive inter-language benchmarking effort is the Programming Language Shootout shootout\footnote{\url{http://shootout.alioth.debian.org/}}. In the shootout a variety of programming tasks are implemented in many languages and benchmarked against each other. Unfortunately, in order to ensure a balanced comparison, many restrictions are placed on the programs -- some of which severely hamper lazy languages. Inspired by their attempt, we have attempted to define some simpler benchmarks on which it is possible to directly compare Haskell to C.
+The most comprehensive inter-language benchmarking effort is the Programming Language Shootout\footnote{\url{http://shootout.alioth.debian.org/}}. In the shootout a variety of tasks are implemented in many languages and benchmarked against each other. Unfortunately, in order to ensure a balanced comparison, many restrictions are placed upon the solutions -- some of which severely hamper lazy languages. Inspired by their attempt, we have defined some simpler benchmarks on which it is possible to directly compare Haskell to C.
 
 The set of benchmarks we have chosen are inspired by the Unix \texttt{wc} command -- namely character, word and line counting. In all cases we require the program to read from the standard input, and write out the number of elements in the file. In order to ensure that we test computation speed, not IO speed (which is usually a product of buffering strategy, rather than optimisation prowess) we demand that all input is read using the standard C |getchar| function only. Any buffering improvements, such as reading in blocks or memory mapping of files, could be performed equally in all compilers.
 
 All the C versions are implemented following a similar pattern to Figure \ref{fig:c_words}. Characters are read in a loop, with an accumulator recording the current value. Depending on the program, the body of the loop decides when to increment the accumulator. The Haskell versions all follow the same pattern as in the Introduction, merely replacing |words| with |lines|, or removing the |words| function for character counting.
 
-We performed all benchmarks on a Windows XP, 3GHz processor, 1Gb RAM machine. All benchmarks were run over a 50Mb log file, repeated 10 times, and the lowest value was taken. The C versions used GCC\footnote{\url{http://gcc.gnu.org/}} version 3.4.2 with -O3. The Haskell version used GHC \cite{ghc} 6.6.1 with -O2. The Supero version was compiled using our optimiser, then written back as a Haskell file, and compiled once more with GHC 6.6.1 and -O2.
+We performed all benchmarks on a machine running Windows XP, with a 3GHz processor and 1Gb RAM. All benchmarks were run over a 50Mb log file, repeated 10 times, and the lowest value was taken. The C versions used GCC\footnote{\url{http://gcc.gnu.org/}} version 3.4.2 with -O3. The Haskell version used GHC \cite{ghc} 6.6.1 with -O2. The Supero version was compiled using our optimiser, then written back as a Haskell file, and compiled once more with GHC 6.6.1 and -O2.
 
 \begin{fig}
 \vspace{7mm}
@@ -387,11 +386,11 @@ words s = case  dropWhile isSpace s of
 
 words' s = case  dropWhile isSpace s of
                  []    ->  []
-                 x:xs  ->  (x:w) : drop1 z
+                 x:xs  ->  (x:w) : words' (drop1 z)
                            where (w, z) = break isSpace xs
 
 drop1 []      = []
-drop1 (x:xs)  = words xs
+drop1 (x:xs)  = xs
 \end{code}
 \figend
 \caption{The |words| function from the Haskell standard libraries, and an improved |words'|.}
@@ -408,7 +407,7 @@ We have identified three reasons why the code generated by Supero underperforms 
 
 \paragraph{Strictness inference}
 
-The GHC compiler is overly conservative when determining strictness for functions which use the FFI (GHC bug 1592). The |getchar| is treated as though it may raise an exception, and terminate the program, so otherwise strict arguments become potentially unevaluated. If GHC permitted some way to mark an FFI function as not generating exceptions, then this problem could be solved. The lacking of strictness information means that in the line and word counting programs, every time the accumulator is incremented, the number is first unboxed and then reboxed \cite{spj:unboxing}.
+The GHC compiler is overly conservative when determining strictness for functions which use the FFI (GHC bug 1592). The |getchar| function is treated as though it may raise an exception, and terminate the program, so otherwise strict arguments become potentially lazy. If GHC provided some way to mark an FFI function as not generating exceptions, then this problem could be solved. The lack of strictness information means that in the line and word counting programs, every time the accumulator is incremented, the number is first unboxed and then reboxed \cite{spj:unboxing}.
 
 \paragraph{Heap checks}
 
@@ -420,15 +419,15 @@ The final source of extra computation relative to the C version are stack checks
 
 \subsection{The Wordcount Benchmark: Supero outperforms C}
 
-The most curious result is that Supero outperforms C on wordcounting, by about 6\% -- even with the problems discussed! The C program presented in Figure \ref{fig:c_words} is not maximally efficient. The variable \verb"last_space" is a boolean, indicating whether the previous character was a space, or not. Each time round the loop a test is performed on \verb"last_space", even though its value was determined and tested previously. The way to optimise this code is to have two specialised variants of the loop, one for when \verb"last_space" is true, and one for where it is false. When the value of \verb"last_space" changed, the program would transition to the other loop. This pattern effectively encodes the boolean variable in the program counter, and is what the Haskell program has managed to generate from the high-level code.
+The most curious result is that Supero outperforms C on wordcounting, by about 6\% -- even with the problems discussed! The C program presented in Figure \ref{fig:c_words} is not maximally efficient. The variable \verb"last_space" is a boolean, indicating whether the previous character was a space, or not. Each time round the loop a test is performed on \verb"last_space", even though its value was determined and tested on the previous iteration. The way to optimise this code is to have two specialised variants of the loop, one for when \verb"last_space" is true, and one for when it is false. When the value of \verb"last_space" changes, the program would transition to the other loop. This pattern effectively encodes the boolean variable in the program counter, and is what the Haskell program has managed to generate from the high-level code.
 
-Unfortunately, in C it is quite challenging to capture the required flow control! The program needs two loops, where both loops can transition to the other. Using the |goto| keyword is not appropriate, as typically this turns off many critical optimisations in the C compiler. Tail recursion is certainly not appropriate, as it is not required by the C standard (nor supported in most compilers). The only way to express the necessary pattern is using nested while loops, but unlike newer imperative languages such as Java, C does not have named loops -- so the inner loop cannot break from the outer loop if it reaches the end of the file. The only solution is to place the nested while loops in a function, and use |return| to break from the inner loop. This solution would not scale to a three-valued control structure, and substantially increases the complexity of the code.
+Unfortunately, in C it is quite challenging to capture the required flow control! The program needs two loops, where both loops can transition to the other. Using the \texttt{goto} keyword is not appropriate, as typically this turns off many critical optimisations in the C compiler. Tail recursion is certainly not appropriate, as it is not required by the C standard (nor supported in most compilers). The only way to express the necessary pattern is using nested while loops, but unlike newer imperative languages such as Java, C does not have named loops -- so the inner loop cannot break from the outer loop if it reaches the end of the file. The only solution is to place the nested while loops in a function, and use \texttt{return} to break from the inner loop. This solution would not scale to a three-valued control structure, and substantially increases the complexity of the code.
 
 \section{Benchmarks Versus Haskell}
 \label{sec:haskell_results}
 
 The standard set of Haskell benchmarks is the nofib suite \cite{nofib}. The nofib suite is divided into three categories of increasing size: imaginary, spectral and real. Many small Haskell programs increase in size substantially once the libraries are included, particularly when type classes are involved. Because of the relatively large size of even small examples, we have limited our focus to five benchmarks drawn from the imaginary section. We have deliberately chosen programs which do not perform large amounts of IO, but instead are compute bound programs.
-The benchmarks are: digits-of-e1 and digits-of-e2, both of which compute the digits of |e|, by different methods; exp3\_8 performs |3^8| using peano numbers and the |Num| class; primes computes a list of prime numbers; and queens counts the possible safe layouts of queen pieces on a chess board. All benchmarks were run with parameters to ensure runtimes of between 3 and 5 seconds for GHC.
+The benchmarks are: digits-of-e1 and digits-of-e2, both of which compute the digits of |e|, by different methods; exp3\_8 computes $3^8$ using peano numbers and the |Num| class; primes computes a list of prime numbers; and queens counts the possible safe layouts of queen pieces on a chess board. All benchmarks were run with parameters to ensure runtimes of between 3 and 5 seconds for GHC.
 
 \begin{fig}
 \vspace{7mm}
@@ -486,33 +485,33 @@ The results of these benchmarks are given in Figure \ref{fig:haskell_results}, a
 
 \subsection{GHC's optimisations}
 
-For these benchmarks it is important to clarify which optimisations are being performed by GHC, and which are performed by Supero. If you were to simply take the Core output from Yhc Core and compile it using GHC Core, you would not get the same performance results as GHC compiled code. There are two particular places where GHC has special optimisations that work in a range of special cases, but which Supero is unable to take advantage of.
+For these benchmarks it is important to clarify which optimisations are being performed by GHC, and which are performed by Supero. If you were to simply take the Core output from Yhc and compile it using GHC, you would \textit{not} get the same performance results as GHC compiled code. There are two particular places where GHC has special optimisations that work in a restricted number of cases, but which Supero is unable to take advantage of.
 
 \paragraph{Dictionary Removal} Functions which make use of type classes are given an additional dictionary argument, which is passed to all functions. In practice, GHC specialises many such functions by creating code with a particular dictionary frozen in. This optimisation is specific to type classes -- a tuple of higher order functions will not be similarly specialised. After compilation with Yhc, the type classes have already been converted to tuples, so unless Supero is able to remove the dictionaries it will loose to GHC. One particular benchmark where dictionary removal is critical is digits-of-e2.
 
 \paragraph{List Fusion} GHC relies on names of functions, particularly |foldr|/|build| \cite{spj:rules}, to apply special optimisation rules such as list fusion. Many of GHC's library functions, for example |iterate|, are defined in terms of |foldr| to take advantage of these special properties. After transformation with Yhc, these names are destroyed, and so no rule based optimisation will be performed. One example where list fusion is critical is primes, although it occurs in most of the benchmarks to some extent.
 
-Supero has no special purpose optimisations which rely on named functions or desugaring knowledge. The one place where no GHC specific optimisations apply is the exp3\_8 benchmark, which operates solely on peano numbers -- a type GHC has no inbuilt knowledge of. This property explains the performance advantages shown by Supero in exp3\_8, while GHC was limited to basic inline/simplify transformations, Supero managed to perform some limited fusion.
+Supero has no special purpose optimisations which rely on named functions or desugaring knowledge. The one benchmark where no GHC specific optimisations apply is exp3\_8, which operates solely on peano numbers -- a type GHC has no inbuilt knowledge of. This property explains the performance advantages shown by Supero in exp3\_8: while GHC is limited to basic inline/simplify transformations, Supero manages to perform some fusion.
 
 \subsection{Termination Bound}
 \label{sec:results_bound}
 
-Table \ref{tab:haskell_results} includes a column indicating the size bound that was applied to expressions. Out of the five benchmarks, both primes and queens could be run at any greater bound and would still produce the same program -- the direct repetition criteria bounds the expressions on its own. For the remaining programs, a bound was chosen which to ensure that the compilation process was quick (under two seconds). By increasing the termination bound the size of the generated program would increase, but potentially the generated program would execute faster.
+Table \ref{tab:haskell_results} includes a column indicating the size bound that was applied to expressions. Out of the five benchmarks, both primes and queens could be run at any greater bound and would still produce the same program -- the direct repetition criteria (see \S\ref{sec:direct}) bounds the expressions on its own. For the remaining programs, a bound was chosen to ensure that the compilation process was quick (under two seconds). By increasing the termination bound the size of the residual program would increase, but the generated program may execute faster.
 
 The existence of a termination bound with the present degree of sensitivity is a cause for concern. In a large program it is likely that different parts of the program would require different bounds on the size of the generated expression -- something not currently possible. We suspect that the most promising direction is to augment the direct repetition criteria, and hope to obtain termination in all practical cases without resorting to a depth bound.
 
 \section{Related Work}
 \label{sec:related}
 
-\paragraph{Partial evaluation} There has been a lot of work on partial evaluation \cite{jones:partial_evaluation}, where a program is specialised with respect to some static data. Typically the emphasis is on determining which variable can be entirely computed at compile time, and which must remain in the residual program. Partial evaluation is particularly appropriate for specialising an interpreter with a partial program to generate a compiler automatically, often with an order of magnitude speedup, known as the First Futamura Projection \cite{futanama:projections}. The difference between our work that partial evaluation is that we do fold back definitions, and perform no binding time analysis. Our method is certainly less appropriate for specialising an interpreter, but in the absence of static data, is still able to show improvements.
+\paragraph{Partial evaluation} There has been a lot of work on partial evaluation \cite{jones:partial_evaluation}, where a program is specialised with respect to some static data. Typically the emphasis is on determining which variable can be entirely computed at compile time, and which must remain in the residual program. Partial evaluation is particularly appropriate for specialising an interpreter with an expression tree to generate a compiler automatically, often with an order of magnitude speedup, known as the First Futamura Projection \cite{futanama:projections}. The difference between our work and partial evaluation is that we fold back definitions, and perform no binding time analysis. Our method is certainly less appropriate for specialising an interpreter, but in the absence of static data, is still able to show improvements.
 
-\paragraph{Deforestation} The deforestation technique \cite{wadler:deforestation} removes intermediate lists in computations. This technique has been extended in many ways to encompass higher order deforestation \cite{marlow:higher_order_deforestation} and work on other data types \cite{coutts:string_fusion}. Probably the most practically motivated work on deforestation has come from those attempting to restrict deforestation, in particular shortcut deforestation \cite{gill:shortcut_deforestation}, and newer approaches such as stream fusion \cite{coutts:stream_fusion}. In this work certain named functions are automatically fused together. By rewriting library functions in terms of these special functions, fusion occurs. Fusion is limited to cases where the correct underlying function is used -- sometimes this requires unnatural definitions.
+\paragraph{Deforestation} The deforestation technique \cite{wadler:deforestation} removes intermediate lists in computations. This technique has been extended in many ways to encompass higher order deforestation \cite{marlow:higher_order_deforestation} and work on other data types \cite{coutts:string_fusion}. Probably the most practically motivated work on deforestation has come from those attempting to restrict deforestation, in particular shortcut deforestation \cite{gill:shortcut_deforestation}, and newer approaches such as stream fusion \cite{coutts:stream_fusion}. In this work certain named functions are automatically fused together. By rewriting library functions in terms of these special functions, fusion occurs. Fusion is limited to cases where the correct underlying function is used -- sometimes requiring unnatural definitions.
 
 \paragraph{GRIN} The GRIN approach \cite{grin} is currently being implemented in the jhc compiler \cite{jhc}, with promising initial results. GRIN works by first translating to a monadic intermediate language, then repeatedly performing a series of optimisations, using whole program transformation. The intermediate language is at a much lower level than our Core language, so it is able to express detailed optimisations that we are unable to.
 
 \paragraph{Other Transformations} Our work makes use of, or subsumes many other transformations in functional programming. One of the central operations within our optimisation in inlining, a technique that has been used extensively within GHC \cite{spj:inlining}. We generalise the constructor specialisation technique \cite{spj:specconstr}, by allowing specialisation on any arbitrary expression, including constructors. One optimisation we do not currently support is the use of user provided transformation rules \cite{spj:rules}, which can be used to automatically replace certain expressions with others -- for example |sort . nub| removes duplicates then sorts a list, but can be done asymptotically faster in a single operation.
 
-\paragraph{Lower Level Optimisations} Our optimisation works at the Core level, but once optimal Core has been generated there is still some work before optimal machine code has been produced. One critical pair of optimisations are strictness analysis and unboxing \cite{spj:unboxing} -- detecting that a value is always used strictly, then removing the indirection that laziness requires. In GHC both of these optimisations are done at the Core level, using a Core language extended with the unboxed kind. After this lower level Core has been generated, it is then transformed in to STG machine instructions \cite{spj:stg}, before being transformed into assembly code. There is still work being done to modify the lowest levels to take advantage of the current generation of microprocessors \cite{marlow:pointer_tagging}. We rely on GHC to perform all these optimisations after Supero generates a residual program.
+\paragraph{Lower Level Optimisations} Our optimisation works at the Core level, but even once optimal Core has been generated there is still some work before optimal machine code can be produced. One critical pair of optimisations are strictness analysis and unboxing \cite{spj:unboxing} -- detecting that a value is always used strictly, then removing the indirection that laziness requires. In GHC both of these optimisations are done at the Core level, using a Core language extended with the unboxed kind. After this lower level Core has been generated, it is then transformed in to STG machine instructions \cite{spj:stg}, before being transformed into assembly code. There is still work being done to modify the lowest levels to take advantage of the current generation of microprocessors \cite{marlow:pointer_tagging}. We rely on GHC to perform all these optimisations after Supero generates a residual program.
 
 \section{Conclusion and Future Work}
 \label{sec:conclusion}
@@ -525,9 +524,9 @@ We have introduced an optimiser, which is capable of outperforming the GHC compi
 \item[Performance] The performance results presented in \S\ref{sec:haskell_results} are not the best we have achieved -- during experimentation we were able to obtain a 50\% speed up in the primes benchmark. We suspect that much better performance can be obtained.
 \end{description}
 
-The shootout has shown that low-level Haskell can compete with with low-level imperative language such as C. Our goal is that Haskell programs can be written in a high-level declarative style, yet still perform competitively.
+The shootout has shown that low-level Haskell can compete with with low-level imperative languages such as C. Our goal is that Haskell programs can be written in a high-level declarative style, yet still perform competitively.
 
-\paragraph{Acknowledgements} Thanks to Simon Peyton Jones, Simon Marlow and Tim Chevalier for help understanding the low-level details of GHC. Thanks to Peter Jonsson for helpful discussions.
+\paragraph{Acknowledgements} We would like to thank Simon Peyton Jones, Simon Marlow and Tim Chevalier for help understanding the low-level details of GHC, and Peter Jonsson for helpful discussions.
 
 \bibliographystyle{plain}
 
